style: update background color and text color for better readability fix: correct weekday index variable naming for consistency refactor: improve getNthWeekdayInMonth function to return ordinal values

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(48, 42, 42);
+    background-color: rgb(228, 233, 220);
     margin-right: 30px;
     margin-left: 30px;
     background-image: url('IT.jfif')/* optional */
@@ -36,9 +36,9 @@ body{
 
 }
 
-#kalenderblatt{
+#kalenderblatt table{
     grid-area: kalenderblatt;
-    border-collapse: collapse;
+
 
 }
 
@@ -119,7 +119,7 @@ td:nth-child(8){
 
 #text_box {
     grid-area: text_box;
-    color:  rgb(124, 123, 121);
+    color:  black;
     font-size: 1rem;
     letter-spacing: 1px;
     text-align: left;
